--- a/Tugas Android/app/build.gradle
+++ b/Tugas Android/app/build.gradle
@@ -54,4 +54,7 @@ dependencies {
 
     implementation 'de.hdodenhof:circleimageview:3.1.0'
     implementation 'com.github.bumptech.glide:glide:4.15.1'
+
+    // ViewModel
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.6.1"
 }
